p2/yaml-2/deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2-deployment
  labels:
    app: app-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-2
  template:
    metadata:
      labels:
        app: app-2
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
