p2/yaml-2/service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-2-service
spec:
  selector:
    app: app-2
  ports:
    - protocol: TCP
      port: 80
