p2/yaml-2/ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-2-ingress
spec:
  rules:
  - host: app-2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-2-service
            port:
              number: 80
